cluster_configuration/kubeapps/kubeapps-ingress.yml
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: '20'
    kubernetes.io/ingress.class: nginx
  name: kubeapps-ingress
  namespace: kubeapps
spec:
  rules:
    #- host: www.example.com
  - http:
      paths:
      - path: /
        backend:
          serviceName: kubeapps
          servicePort: 80
